// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > getProjectConfig > 'vite-native' 1`] = `
[
  {
    "op": "add",
    "path": [
      "description",
    ],
    "value": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
  },
  {
    "op": "add",
    "path": [
      "projectname",
    ],
    "value": "vite-native",
  },
]
`;

exports[`utils > getProjectConfig > 'vite-native-skyline' 1`] = `
[
  {
    "op": "add",
    "path": [
      "description",
    ],
    "value": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
  },
  {
    "op": "add",
    "path": [
      "projectname",
    ],
    "value": "vite-native-skyline",
  },
]
`;

exports[`utils > getProjectConfig > 'vite-native-ts' 1`] = `
[
  {
    "op": "add",
    "path": [
      "projectname",
    ],
    "value": "vite-native-ts",
  },
]
`;

exports[`utils > getProjectConfig > 'vite-native-ts-skyline' 1`] = `
[
  {
    "op": "add",
    "path": [
      "projectname",
    ],
    "value": "vite-native-ts-skyline",
  },
]
`;
